--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Module 2</title>
+	<link rel="stylesheet" href="css/styles.css">	
 </head>
-<body>
-	<h1>Module 2 solution</h1>
+<body>	
+	<div class="row">
+		<header>Our Menu</header>
+	</div>
+	<div class="row">
+		<section class="section1 col-xs-12 col-md-6 col-lg-4">		
+			<span class="title1">Chicken</span>
+			<div class="detail">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae temporibus esse suscipit nisi ad. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, doloribus eos perspiciatis.</div>
+		</section>
+		<section class="section2 col-xs-12 col-md-6 col-lg-4">
+			<span class="title2">Beef</span>
+			<div class="detail">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae temporibus esse suscipit nisi ad. </div>
+		</section>
+		<section class="section3 col-xs-12 col-md-12 col-lg-4">
+			<span class="title3">Sushi</span>
+			<div class="detail">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae temporibus esse suscipit nisi ad. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, doloribus eos perspiciatis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, doloribus eos perspiciatis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, doloribus eos perspiciatis.</div>
+		</section>		
+	</div>
+
 </body>
 </html>
