1st modify index.html

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -11,18 +11,24 @@
 		<header>Our Menu</header>
 	</div>
 	<div class="row">
-		<section class="section1 col-xs-12 col-md-6 col-lg-4">		
-			<span class="title1">Chicken</span>
-			<div class="detail">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae temporibus esse suscipit nisi ad. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, doloribus eos perspiciatis.</div>
-		</section>
-		<section class="section2 col-xs-12 col-md-6 col-lg-4">
-			<span class="title2">Beef</span>
-			<div class="detail">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae temporibus esse suscipit nisi ad. </div>
-		</section>
-		<section class="section3 col-xs-12 col-md-12 col-lg-4">
-			<span class="title3">Sushi</span>
-			<div class="detail">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae temporibus esse suscipit nisi ad. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, doloribus eos perspiciatis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, doloribus eos perspiciatis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, doloribus eos perspiciatis.</div>
-		</section>		
+		<div class="col-xs-12 col-md-6 col-lg-4">
+			<section class="section1">		
+				<span class="title1">Chicken</span>
+				<div class="detail">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae temporibus esse suscipit nisi ad. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, doloribus eos perspiciatis.</div>
+			</section>
+		</div>
+		<div class="col-xs-12 col-md-6 col-lg-4">
+			<section class="section2">
+				<span class="title2">Beef</span>
+				<div class="detail">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae temporibus esse suscipit nisi ad. </div>
+			</section>
+		</div>
+		<div class="col-xs-12 col-md-12 col-lg-4">
+			<section class="section3">
+				<span class="title3">Sushi</span>
+				<div class="detail">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae temporibus esse suscipit nisi ad. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, doloribus eos perspiciatis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, doloribus eos perspiciatis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, doloribus eos perspiciatis.</div>
+			</section>
+		</div>
 	</div>
 
 </body>
